--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Jura:wght@500&family=Kdam+Thmor+Pro&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Petit+Formal+Script&family=VT323&display=swap');
 
 * {
   margin: 0;
@@ -117,4 +118,17 @@ body {
 
 .deleters:hover {
   background-color: rgb(248, 73, 73);
+}
+
+.footer {
+  font-family: 'VT323', monospace;
+  font-size: 1.5em;
+  position: relative;
+  top: 5%;
+}
+
+.footer p {
+  width: 10rem;
+  display: flex;
+  gap: 1rem;
 }
